--- a/templates/components/carousel-content.html
+++ b/templates/components/carousel-content.html
@@ -6,7 +6,7 @@
         <p class="heroCarousel-description">{{{text}}}</p>
     {{/if}}
     {{#if button_text}}
-        <a href="{{url}}" aria-label="{{#if this.alt_text.length '!=' 0}}{{this.alt_text}}{{else}}{{lang 'carousel.slide_number' slide_number=(add @index 1)}}{{/if}}, {{button_text}}" class="heroCarousel-action button no-after">
+        <a href="{{url}}" aria-label="{{#if this.alt_text.length '!=' 0}}{{this.alt_text}}{{else}}{{lang 'carousel.slide_number' slide_number=(add @index 1)}}{{/if}}, {{button_text}}" class="heroCarousel-action button">
             {{{button_text}}}
 
             <span class="icon icon--arrow-right">
