--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -30,6 +30,7 @@ blog:
 <div class="main full">
    {{> components/custom/home/section-home-service }}
 
+   {{> components/custom/home/home-carousel-banner}}
 </div>
 {{/partial}}
 {{> layout/base}}
