--- a/templates/components/custom/home/home-carousel-banner.html
+++ b/templates/components/custom/home/home-carousel-banner.html
@@ -1,6 +1,6 @@
-<div class="homeSlickBanner">
+<section class="homeSlickBanner">
     <div class="homeSlickBanner__list section-slick" data-section-load="slick-slider" data-slick-options='{
-        "autoplay": false, 
+        "autoplay": true, 
         "autoplaySpeed": 2000, 
         "slidesToShow": 1,
         "slidesToScroll": 1,
@@ -63,4 +63,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
