--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -31,6 +31,8 @@ blog:
    {{> components/custom/home/section-home-service }}
 
    {{> components/custom/home/home-carousel-banner}}
+
+   {{> components/custom/home/home-columns-banner}}
 </div>
 {{/partial}}
 {{> layout/base}}
