--- a/assets/scss/custom/_class.scss
+++ b/assets/scss/custom/_class.scss
@@ -624,3 +624,13 @@
     }
 }
 
+.frame {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.frame-item {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    width: 100%;
+}
