--- a/templates/components/custom/home/home-carousel-banner.html
+++ b/templates/components/custom/home/home-carousel-banner.html
@@ -10,7 +10,7 @@
         "infinite": true
     }'>
         <div class="homeSlickBanner__item">
-            <div class="image-overlay"></div>
+            <div class="image-overlay" style="--overlay-opacity: 0.35;"></div>
             <div class="homeSlickBanner__image">
                 <a href="{{theme_settings.home_banner_carousel_1_link}}" class="homeSlickBanner__link image-loader">
                     <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_banner_carousel_1_img}}" alt="{{theme_settings.home_banner_carousel_1_title}}">
@@ -37,7 +37,7 @@
         </div>
 
         <div class="homeSlickBanner__item">
-            <div class="image-overlay"></div>
+            <div class="image-overlay" style="--overlay-opacity: 0.35;"></div>
             <div class="homeSlickBanner__image">
                 <a href="{{theme_settings.home_banner_carousel_2_link}}" class="homeSlickBanner__link image-loader">
                     <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{theme_settings.home_banner_carousel_2_img}}" alt="{{theme_settings.home_banner_carousel_2_title}}">
