--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -33,6 +33,8 @@ blog:
    {{> components/custom/home/home-carousel-banner}}
 
    {{> components/custom/home/home-columns-banner}}
+
+   {{> components/custom/home/section-home-gallery}}
 </div>
 {{/partial}}
 {{> layout/base}}
