--- a/assets/scss/custom/_common.scss
+++ b/assets/scss/custom/_common.scss
@@ -179,15 +179,17 @@
 }
 
 .image-overlay {
+    --bg: #000000;
+    --overlay-opacity: 0.25;
+
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 10;
-    background-color: #000000;
-    opacity: 0.25;
-    will-change: opacity;
+    background-color: var(--bg);
+    opacity: var(--overlay-opacity);
 }
 
 .custom-mobile-slider {
@@ -218,18 +220,8 @@
     }; 
 }
 
-.image-overlay {
-    --bg: #000000;
-    --overlay-opacity: 0.35;
-
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
-    background-color: var(--bg);
-    opacity: var(--overlay-opacity);
+.heading-font {
+    font-family: stencilFontFamily("headings-font");
 }
 
 .heading-size {
