--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -35,6 +35,11 @@ blog:
    {{> components/custom/home/home-columns-banner}}
 
    {{> components/custom/home/section-home-gallery}}
+
+   {{> components/custom/home/section-home-account}}
+
+   {{> components/custom/home/home-product-block}}
+
 </div>
 {{/partial}}
 {{> layout/base}}
