--- a/assets/scss/custom/_common.scss
+++ b/assets/scss/custom/_common.scss
@@ -109,29 +109,102 @@
     }
 }
 
+//
+// Skeleton Loader
+// -----------------------------------------------------------------------------
+.skeleton-loader {
+    background: #f2f2f2;
+    background: linear-gradient(120deg, #f2f2f2 25%, #e6e6e6 37%, #f2f2f2 63%);
+    background-size: 200% 100%;
+    animation: skeleton-loading 4s infinite linear;
+}
 
-/* ----------------- Grid Layout ----------------- */
-.row {
-    --f-col: var(--rowDesktop);
-    --f-gap: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: calc(var(--f-gap) / -2);
-    margin-right: calc(var(--f-gap) / -2);
+// CSS for product skeleton
+// -----------------------------------------------------------------------------
+.productSkeleton {
+    &__list {
+        display: flex;
+        @include flex-layout(1, 0px);
+        
+        @include smin-xs {
+            @include flex-layout(2, 20px);
+        }
 
-    @include smax-m {
-        --f-col: var(--rowTablet);
+        @include smin-s {
+            @include flex-layout(3, 20px);
+        }
+
+        @include smin-m {
+            @include flex-layout(4, 32px);
+        }
+
+        &.no-wrap {
+            flex-wrap: nowrap;
+            overflow: hidden;
+
+            .productSkeleton__item {
+                min-width: 27%;
+
+                @include smax-m {
+                    min-width: 37%
+                }; 
+
+                @include smax-s {
+                    min-width: 70%
+                };
+            }
+        }
     }
 
-    @include smax-s {
-        --f-col: var(--rowMobile);
+    &__item {
+        padding: 15px;
+
+        @include smax-l {
+            &:nth-child(n + 5) {
+                display: none;
+            }
+        }
+
+        @include smax-m {
+            &:nth-child(n + 4) {
+                display: none;
+            }
+        }
+
+        @include smax-s {
+            &:nth-child(n + 3) {
+                display: none;
+            }
+        }
+
+        @include smax-xs {
+            &:nth-child(n + 2) {
+                display: none;
+            }
+        }
     }
 
-    .col {
-        padding-left: calc(var(--f-gap) / 2);
-        padding-right: calc(var(--f-gap) / 2);
-        flex: 0 0 calc(100% / var(--f-col));
-        max-width: calc(100% / var(--f-col));
+    &__image {
+        width: 100%;
+        height: 230px;
+    }
+
+    &__title {
+        height: 34px;
+        margin-top: 12px;
+        margin-bottom: 12px;
+    }
+
+    &__price {
+        height: 39px;
+        margin-bottom: 30px;
+    }
+
+    &__rating {
+        height: 24px;
+        width: 85px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -154,6 +227,26 @@
     &::-webkit-scrollbar-thumb:hover {
         background: #555555;
     }
+}
+
+.wrapper {
+    margin: 0 auto;
+    padding-left: 50px;
+    padding-right: 50px;
+    
+    @include smin-m {
+        max-width: 80vw;
+    }; 
+
+    @include smax-s {
+        padding-left: 30px;
+        padding-right: 30px;
+    }; 
+
+    @include smax-xs {
+        padding-left: 16px;
+        padding-right: 16px;
+    }; 
 }
 
 .image-loader {
@@ -236,6 +329,17 @@
         }; 
     }
 
+    &-7 {
+        font-size: 37px;
+        line-height: 44px;
+        letter-spacing: 0;
+
+        @include smax-s {
+            font-size: 31px;
+            line-height: 37px;
+        }; 
+    }
+
     &-12 {
         font-size: 71px;
         line-height: 86px;
@@ -256,6 +360,7 @@
         letter-spacing: 0;
     
         @include smax-s {
+            font-size: 14px;
             line-height: 21px;
         }; 
     }
