--- a/templates/components/custom/home/home-product-block.html
+++ b/templates/components/custom/home/home-product-block.html
@@ -1,4 +1,4 @@
-<div id="list-product-detail-block" class="home-product-block">
+<section id="list-product-detail-block" class="home-product-block">
     <div class="pl-0 pr-0">
         <div id="list-product-detail" class="product-block" data-columns="4" data-limit="8" data-dots="false">
             <div class="productsByListId custom-block-product" data-list-id="{{theme_settings.home_product_banner_listid}}" id="product-by-list-id">
@@ -9,7 +9,7 @@
                    {{> components/custom/global/product-skeleton }}
                    {{> components/custom/global/product-skeleton }}
                 </div>
-                <section class="productCarousel productCarouselCustom">
+                <div class="productCarousel productCarouselCustom">
                    <div class="customBlockBanner productCarousel-slide">
                     <div class="customBlockBanner__image">
                         <a href="{{theme_settings.home_product_banner_link}}" class="customBlockBanner__link">
