--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -40,6 +40,8 @@ blog:
 
    {{> components/custom/home/home-product-block}}
 
+   {{> components/custom/home/section-shop-the-look}}
+
 </div>
 {{/partial}}
 {{> layout/base}}
