--- a/templates/components/custom/home/section-shop-the-look.html
+++ b/templates/components/custom/home/section-shop-the-look.html
@@ -67,7 +67,7 @@
             <div class="productsByListId2 custom-block-product" data-list-id-2="10404,10380,10011,9802,10232,10294" id="product-by-list-id-2">
                 <p class="shopLook__title uppercase text-center">Shop the look</p>
 
-                <a href="#" class="shopLook__close">
+                <a href="#" class="shopLook__close hide-on-minMobile">
                     <span class="icon icon--close2">
                         <svg><use xlink:href="#icon-close2"></use></svg>
                     </span>
