--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -42,6 +42,16 @@ blog:
 
    {{> components/custom/home/section-shop-the-look}}
 
+   {{> components/custom/home/home-section-banner-column}}
+
+   {{> components/custom/home/home-section-testimonial}}
+
+   {{> components/custom/home/home-full-banner}}
+
+   {{> components/custom/home/home-feature-post post=blog.recent_posts }}
+
+   {{> components/custom/home/home-section-instagram }}
+
 </div>
 {{/partial}}
 {{> layout/base}}
